Fix job console overflow

--- a/packages/dashboard/src/components/project/builds/buildPage/style.less
+++ b/packages/dashboard/src/components/project/builds/buildPage/style.less
@@ -81,5 +81,10 @@
         color: white;
         padding: 25px 35px;
         min-height: 300px;
+
+        pre {
+            white-space: pre-line;
+            word-wrap: break-word;
+        }
     }
 }
